<resources>
    <string name="app_name">Ten10</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchItem">Search Item</string>
    <string name="chooseItem">Choose Item</string>
    <string name="workingHours">Working Hours</string>
    <string name="about">About Ten 10</string>
    <string name="Team">Team</string>
    <string name="pickAnItem">Pick an Item</string>

    <string name="available">Is Available</string>

    <string name="sorry">Out of stock</string>

    <string name="detailsDays">Monday to Friday</string>
    <string name="detailsHours">8am to 6pm</string>
    <string name="itsA">It is a Supermarket</string>
    <string name="inside">Inside Limkokwing University </string>
    <string name="atCyberjaya">At Cyberjaya</string>

    <string name="addToCart">Add To Cart  </string>
    <string name="yourbill">Your Bill is </string>
    
    <string name="alaa">Alaa Shahhoud    110038228 </string>
    <string name="alind">Alind Muhammed Radhi Hassan    110036259</string>
    <string name="ali">Ali Adeeb Taher     110035464</string>
    <string name="osman">Osman Claudius Farma-Hai     110040089</string>
    
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="beauty">Beauty</string>
    <string name="pay">Pay</string>
</resources>
