<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/number10"
       android:layout_marginBottom="40dp"/>
    <Button
        android:id="@+id/searchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tur"
        android:layout_marginBottom="15dp"
        android:text="@string/searchItem"
        android:textSize="22sp"
        android:onClick="searchItemMethod"
        />

    <Button
        android:id="@+id/workingGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tur"
        android:text="@string/workingHours"
        android:layout_marginBottom="15dp"
        android:textSize="22sp"
        android:onClick="workingHours"/>

    <Button
        android:id="@+id/aboutTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:background="@color/tur"
        android:layout_marginBottom="15dp"
        android:text="@string/about"
        android:onClick="aboutTen"/>

</LinearLayout>
